[metadata]
name = st2mistral

[files]
packages =
    st2mistral

[entry_points]
mistral.actions =
    st2.action = st2mistral.actions.stackstorm:St2Action

mistral.expression.functions =
    st2kv = st2mistral.functions.stackstorm:st2kv_

    decrypt_kv = st2mistral.functions.stackstorm:decrypt_kv_
    to_json_string = st2mistral.functions.stackstorm:to_json_string_
    to_yaml_string = st2mistral.functions.stackstorm:to_yaml_string_
    to_complex = st2mistral.functions.stackstorm:to_complex_
    regex_match = st2mistral.functions.stackstorm:regex_match_
    regex_replace = st2mistral.functions.stackstorm:regex_replace_
    regex_search = st2mistral.functions.stackstorm:regex_search_
    regex_substring = st2mistral.functions.stackstorm:regex_substring_
    to_human_time_from_seconds = st2mistral.functions.stackstorm:to_human_time_from_seconds_
    version_compare = st2mistral.functions.stackstorm:version_compare_
    version_more_than = st2mistral.functions.stackstorm:version_more_than_
    version_less_than = st2mistral.functions.stackstorm:version_less_than_
    version_equal = st2mistral.functions.stackstorm:version_equal_
    version_match = st2mistral.functions.stackstorm:version_match_
    version_bump_major = st2mistral.functions.stackstorm:version_bump_major_
    version_bump_minor = st2mistral.functions.stackstorm:version_bump_minor_
    version_bump_patch = st2mistral.functions.stackstorm:version_bump_patch_
    version_strip_patch = st2mistral.functions.stackstorm:version_strip_patch_
    use_none = st2mistral.functions.stackstorm:use_none_
    json_escape = st2mistral.functions.stackstorm:json_escape_

mistral.auth =
    st2 = st2mistral.auth.server:St2AuthHandler

mistralclient.auth =
    st2 = st2mistral.auth.client:St2AuthHandler
