[metadata]
name = st2mistral

[files]
packages =
    st2mistral

[entry_points]
mistral.actions =
    st2.action = st2mistral.actions.stackstorm:St2Action

mistral.expression.functions =
    st2kv = st2mistral.functions.stackstorm:st2kv_

    to_json_string = st2mistral.filters.data:to_json_string
    to_yaml_string = st2mistral.filters.data:to_yaml_string
    to_complex = st2mistral.filters.complex_type:to_complex
    regex_match = st2mistral.filters.regex:regex_match
    regex_replace = st2mistral.filters.regex:regex_replace
    regex_search = st2mistral.filters.regex:regex_search
    regex_substring = st2mistral.filters.regex:regex_substring
    to_human_time_from_seconds = st2mistral.filters.time:to_human_time_from_seconds
    version_compare = st2mistral.filters.version:version_compare
    version_more_than = st2mistral.filters.version:version_more_than
    version_less_than = st2mistral.filters.version:version_less_than
    version_equal = st2mistral.filters.version:version_equal
    version_match = st2mistral.filters.version:version_match
    version_bump_major = st2mistral.filters.version:version_bump_major
    version_bump_minor = st2mistral.filters.version:version_bump_minor
    version_bump_patch = st2mistral.filters.version:version_bump_patch
    version_strip_patch = st2mistral.filters.version:version_strip_patch
    json_escape = st2mistral.filters.json_escape:json_escape
    use_none = st2mistral.filters.stackstorm:use_none_

mistral.auth =
    st2 = st2mistral.auth.server:St2AuthHandler

mistralclient.auth =
    st2 = st2mistral.auth.client:St2AuthHandler
