[metadata]
name = st2mistral

[files]
packages =
    st2mistral

[entry_points]
mistral.actions =
    st2.action = st2mistral.actions.stackstorm:St2Action

mistral.expression.functions =
    json_escape = st2mistral.functions.json_escape:json_escape
    regex_match = st2mistral.functions.regex:regex_match
    regex_replace = st2mistral.functions.regex:regex_replace
    regex_search = st2mistral.functions.regex:regex_search
    regex_substring = st2mistral.functions.regex:regex_substring
    st2kv = st2mistral.functions.stackstorm:st2kv_
    to_complex = st2mistral.functions.complex_type:to_complex
    to_human_time_from_seconds = st2mistral.functions.time:to_human_time_from_seconds
    to_json_string = st2mistral.functions.data:to_json_string
    to_yaml_string = st2mistral.functions.data:to_yaml_string
    use_none = st2mistral.functions.use_none:use_none
    version_compare = st2mistral.functions.version:version_compare
    version_bump_major = st2mistral.functions.version:version_bump_major
    version_bump_minor = st2mistral.functions.version:version_bump_minor
    version_bump_patch = st2mistral.functions.version:version_bump_patch
    version_equal = st2mistral.functions.version:version_equal
    version_less_than = st2mistral.functions.version:version_less_than
    version_match = st2mistral.functions.version:version_match
    version_more_than = st2mistral.functions.version:version_more_than
    version_strip_patch = st2mistral.functions.version:version_strip_patch

mistral.auth =
    st2 = st2mistral.auth.server:St2AuthHandler

mistralclient.auth =
    st2 = st2mistral.auth.client:St2AuthHandler
